--- a/packages/notebook/package.json
+++ b/packages/notebook/package.json
@@ -9,6 +9,7 @@
     "@theia/monaco": "1.52.0",
     "@theia/monaco-editor-core": "1.83.101",
     "@theia/outline-view": "1.52.0",
+    "advanced-mark.js": "^2.6.0",
     "react-perfect-scrollbar": "^1.5.8",
     "tslib": "^2.6.2"
   },
