--- a/packages/vsx-registry/package.json
+++ b/packages/vsx-registry/package.json
@@ -11,6 +11,7 @@
     "@theia/plugin-ext-vscode": "1.52.0",
     "@theia/preferences": "1.52.0",
     "@theia/workspace": "1.52.0",
+    "limiter": "^2.1.0",
     "luxon": "^2.4.0",
     "p-debounce": "^2.1.0",
     "semver": "^7.5.4",
