--- a/packages/ai-chat-ui/package.json
+++ b/packages/ai-chat-ui/package.json
@@ -3,6 +3,7 @@
   "version": "1.52.0",
   "description": "Theia - AI Chat UI Extension",
   "dependencies": {
+    "@theia/ai-core": "1.52.0",
     "@theia/ai-chat": "1.52.0",
     "@theia/ai-core": "1.52.0",
     "@theia/core": "1.52.0",
