--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "node": ">=18"
   },
   "resolutions": {
-    "**/@types/node": "18"
+    "**/@types/node": "18",
+    "**/nan": "2.20.0"
   },
   "devDependencies": {
     "@types/chai": "4.3.0",
