Download json schema catalog at build-time instead of run-time
Fixes #11881

Contributed on behalf of STMicroelectronics

Signed-off-by: Thomas Mäder <t.s.maeder@gmail.com>

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -197,6 +197,7 @@
     "src"
   ],
   "scripts": {
+    "prebuild": "yarn download:json-schema",
     "build": "theiaext build",
     "clean": "theiaext clean",
     "compile": "theiaext compile",
@@ -204,6 +205,7 @@
     "generate-theia-re-exports": "theia-re-exports generate && theia-re-exports template README_TEMPLATE.md > README.md",
     "lint": "theiaext lint",
     "prepare": "yarn -s generate-theia-re-exports",
+    "download:json-schema": "node ./scripts/download-catalog.js",
     "test": "theiaext test",
     "version": "yarn -s generate-theia-re-exports",
     "watch": "theiaext watch"
@@ -211,7 +213,8 @@
   "devDependencies": {
     "@theia/ext-scripts": "1.52.0",
     "@theia/re-exports": "1.52.0",
-    "minimist": "^1.2.0"
+    "minimist": "^1.2.0",
+    "nodejs-file-downloader": "4.13.0"
   },
   "nyc": {
     "extends": "../../configs/nyc.json"
