--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -197,14 +197,13 @@
     "src"
   ],
   "scripts": {
-    "prebuild": "yarn download:json-schema",
     "build": "theiaext build",
     "clean": "theiaext clean",
     "compile": "theiaext compile",
     "generate-layout": "electron ./scripts/generate-layout",
     "generate-theia-re-exports": "theia-re-exports generate && theia-re-exports template README_TEMPLATE.md > README.md",
     "lint": "theiaext lint",
-    "prepare": "yarn -s generate-theia-re-exports",
+    "prepare": "yarn -s generate-theia-re-exports && yarn download:json-schema",
     "download:json-schema": "node ./scripts/download-catalog.js",
     "test": "theiaext test",
     "version": "yarn -s generate-theia-re-exports",
