--- a/packages/filesystem/package.json
+++ b/packages/filesystem/package.json
@@ -10,7 +10,8 @@
     "@types/tar-fs": "^1.16.1",
     "async-mutex": "^0.3.1",
     "body-parser": "^1.18.3",
-    "browserfs": "^1.4.3",
+    "@zenfs/core": "^0.16.4",
+    "@zenfs/dom": "^0.2.14",
     "http-status-codes": "^1.3.0",
     "minimatch": "^5.1.0",
     "multer": "1.4.4-lts.1",
