--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
   },
   "resolutions": {
     "**/@types/node": "18",
-    "**/nan": "2.20.0",
-    "@vscode/vsce": "2.25.0"
+    "**/nan": "2.20.0"
   },
   "devDependencies": {
     "@types/chai": "4.3.0",
