--- a/examples/browser/package.json
+++ b/examples/browser/package.json
@@ -28,6 +28,7 @@
     "@theia/ai-core": "1.54.0",
     "@theia/ai-history": "1.54.0",
     "@theia/ai-ollama": "1.54.0",
+    "@theia/ai-llamafile": "1.54.0",
     "@theia/ai-openai": "1.54.0",
     "@theia/ai-terminal": "1.54.0",
     "@theia/ai-workspace-agent": "1.54.0",
