--- a/packages/ai-llamafile/package.json
+++ b/packages/ai-llamafile/package.json
@@ -3,13 +3,10 @@
   "version": "1.54.0",
   "description": "Theia - Llamafile Integration",
   "dependencies": {
-    "@theia/core": "1.54.0",
-    "@theia/filesystem": "1.54.0",
-    "@theia/workspace": "1.54.0",
-    "minimatch": "^5.1.0",
-    "tslib": "^2.6.2",
     "@theia/ai-core": "1.54.0",
-    "@theia/output": "1.54.0"
+    "@theia/core": "1.54.0",
+    "@theia/output": "1.54.0",
+    "tslib": "^2.6.2"
   },
   "publishConfig": {
     "access": "public"
