--- a/packages/ai-core/package.json
+++ b/packages/ai-core/package.json
@@ -11,6 +11,8 @@
     "@theia/output": "1.54.0",
     "@theia/variable-resolver": "1.54.0",
     "@theia/workspace": "1.54.0",
+    "@types/js-yaml": "^4.0.9",
+    "js-yaml": "^4.1.0",
     "minimatch": "^5.1.0",
     "tslib": "^2.6.2"
   },
