--- a/packages/plugin-ext/package.json
+++ b/packages/plugin-ext/package.json
@@ -60,6 +60,9 @@
       "frontend": "lib/plugin-ext-frontend-module"
     },
     {
+      "frontendOnly": "lib/plugin-ext-frontend-only-module"
+    },
+    {
       "frontendElectron": "lib/plugin-ext-frontend-electron-module"
     }
   ],
