--- a/packages/electron/package.json
+++ b/packages/electron/package.json
@@ -12,7 +12,7 @@
     "@theia/re-exports": "1.55.0"
   },
   "peerDependencies": {
-    "electron": "^30.1.2"
+    "electron": "30.1.2"
   },
   "theiaReExports": {
     "shared": {
