--- a/examples/browser/tsconfig.json
+++ b/examples/browser/tsconfig.json
@@ -24,6 +24,9 @@
       "path": "../../packages/ai-history"
     },
     {
+      "path": "../../packages/ai-hugging-face"
+    },
+    {
       "path": "../../packages/ai-llamafile"
     },
     {
