--- a/tsconfig.json
+++ b/tsconfig.json
@@ -70,6 +70,9 @@
       "path": "packages/ai-history"
     },
     {
+      "path": "packages/ai-hugging-face"
+    },
+    {
       "path": "packages/ai-llamafile"
     },
     {
