--- a/packages/plugin-metrics/package.json
+++ b/packages/plugin-metrics/package.json
@@ -25,7 +25,7 @@
   "license": "EPL-2.0 OR GPL-2.0-only WITH Classpath-exception-2.0",
   "repository": {
     "type": "git",
-    "url": "https://github.com/theia-ide/theia.git"
+    "url": "https://github.com/eclipse-theia/theia.git"
   },
   "bugs": {
     "url": "https://github.com/theia-ide/theia/issues"
