--- a/packages/remote/package.json
+++ b/packages/remote/package.json
@@ -33,7 +33,7 @@
   "license": "EPL-2.0 OR GPL-2.0 WITH Classpath-exception-2.0",
   "repository": {
     "type": "git",
-    "url": "https://github.com/theia-ide/theia.git"
+    "url": "https://github.com/eclipse-theia/theia.git"
   },
   "bugs": {
     "url": "https://github.com/theia-ide/theia/issues"
