--- a/packages/ai-workspace-agent/package.json
+++ b/packages/ai-workspace-agent/package.json
@@ -21,7 +21,9 @@
     "@theia/navigator": "1.55.0",
     "@theia/terminal": "1.55.0",
     "@theia/ai-core": "1.55.0",
-    "@theia/ai-chat": "1.55.0"
+    "@theia/ai-chat": "1.55.0",
+    "ignore": "^6.0.0",
+    "minimatch": "^10.0.0"
   },
   "publishConfig": {
     "access": "public"
