--- a/examples/api-samples/package.json
+++ b/examples/api-samples/package.json
@@ -4,6 +4,8 @@
   "version": "1.55.0",
   "description": "Theia - Example code to demonstrate Theia API",
   "dependencies": {
+    "@theia/ai-core": "1.55.0",
+    "@theia/ai-chat": "1.55.0",
     "@theia/ai-chat-ui": "1.55.0",
     "@theia/core": "1.55.0",
     "@theia/file-search": "1.55.0",
